--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -1,6 +1,7 @@
 .body-container {
-  max-width: 600px;
-  margin: 0 auto;
+  max-width: 800px;
+  /* margin: 0 auto; */
   padding-top: 72px;
+  padding-left: 72px;
   -webkit-font-smoothing: antialiased;
 }
